# slideshare-ppt-saver

./: .gitignore  README.md  app.py  pyproject.toml  slideshare_to_pptx.py  ui.py
testing/: __init__.py  test_core.py  test_export.py  test_ui.py
testing/fixtures/: sample_slideshare_page.html
